# plaque_assay

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt  results.json  setup.py
.github/workflows/: doc-deploy.yml  mypy.yml  pythonpackage.yml
plaque_assay/: __init__.py  consts.py  data.py  db_models.py  db_uploader.py  errors.py  experiment.py  failure.py  ingest.py  main.py  plate.py  plotting.py  qc.py  qc_criteria.py  results.json  sample.py  stats.py  titration.py  titration_consts.py  titration_db_uploader.py  titration_dilution.py  titration_ingest.py  titration_main.py  titration_utils.py  utils.py  variant.py
plaque_assay/titration/: __init__.py  consts.py  db_uploader.py  dilution.py  ingest.py  main.py  titration.py  titration_class.py  titration_dilution.py  utils.py
tests/: test_experiment.py  test_experiment_1_40.py  test_integration.py  test_integration_titration.py  test_qc.py  test_sample.py  test_stats.py  test_stats_1_40.py  test_utils.py
tests/dilution_1_4/: test_experiment_1_4.py  test_integration.py  test_integration_titration.py  test_sample_1_4.py
tests/test_data/NA_raw_data/S01000191__2021-06-16T16_58_08-Measurement 1/: indexfile.txt
tests/test_data/dilution_1_10/experiment_df/: experiment_df_example.csv  experiment_df_example_2.csv
tests/test_data/dilution_1_4/experiment_df/: .~lock.experiment_df_example.csv#
tests/test_data_files/000001/A11000001__2020-12-17T14_47_20-Measurement 1/: indexfile.txt
tests/test_data_files/000001/A12000001__2020-12-17T15_02_29-Measurement 1/: indexfile.txt
tests/test_data_files/000001/A21000001__2020-12-17T15_17_36-Measurement 1/: indexfile.txt
tests/test_data_files/000001/A22000001__2020-12-17T15_32_40-Measurement 1/: indexfile.txt
tests/test_data_files/0000030__2020-10-21T16_18_39-Measurement 1/: indexfile.txt
tests/test_data_files/0000032__2020-10-21T16_48_47-Measurement 1/: indexfile.txt
(+149 files in other folders)
